@@ -57,8 +57,6 @@ public:
 	csRef<iSndSysRenderer> sndrenderer;
 	csRef<iSndSysLoader> sndloader;
 
-	csRef<iSector> area;
-
 	bool RenderOnly; //skip sim processing and only render graphics
 	bool InputOnly; //skip sim processing and only run input and rendering code
 	bool IsRunning;
